# Winfetch

./: .gitignore  CMakeLists.txt  README.md  build.ps1
src/: ascii_art.cpp  config.cpp  display.cpp  main.cpp  system_info.cpp
